Stop table from messing up on collapse/expand.

--- a/metatag_ui/metatag_ui.admin.css
+++ b/metatag_ui/metatag_ui.admin.css
@@ -18,6 +18,14 @@ div.metatag-config-label > a {
   background-position: center left;
 }
 
+table.metatag-config-overview tbody tr td:first-child {
+  width: 60%;
+}
+
+table.metatag-config-overview tbody tr td {
+  vertical-align: top;
+}
+
 table.metatag-config-overview tbody div.indent {
   margin-left: 20px;
 }
